Change implementation of membership commands